--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://award.skoch.in/apply/municipality/?utm_campaign=MunicipalityStudy" />
-Redirecting to <a href="https://award.skoch.in/apply/municipality/?utm_campaign=MunicipalityStudy">https://award.skoch.in/apply/municipality/?utm_campaign=MunicipalityStudy</a>
+<meta http-equiv="refresh" content="0; url=https://award.skoch.in/apply/punjab/?utm_campaign=PunjabStudy" />
+Redirecting to <a href="https://award.skoch.in/apply/punjab/?utm_campaign=PunjabStudy">https://award.skoch.in/apply/punjab/?utm_campaign=PunjabStudy</a>
